--- a/ansible/install_applications_new/site.yml
+++ b/ansible/install_applications_new/site.yml
@@ -11,3 +11,4 @@
     - { role: dev-argo-tasks,                tags: kubernetes-app-dev-argo-tasks,                when: argo_tasks_enabled | bool }
     - { role: auth-openldap,                 tags: kubernetes-app-auth-lemonldap,                when: openldap_enabled | bool }
     - { role: auth-lemonldap,                tags: kubernetes-app-auth-lemonldap,                when: lemonldap_enabled | bool }
+    - { role: auth-phpldapadmin,             tags: kubernetes-app-auth-phpldapadmin,             when: phpldapadmin_enabled | bool }
