--- a/apps/base/auth-phpldapadmin/deploy/ingress.yaml
+++ b/apps/base/auth-phpldapadmin/deploy/ingress.yaml
@@ -2,14 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: phpldapadmin
-  namespace: {{ phpldapadmin.namespace }}
-  labels:
-    {{ phpldapadmin.labels_def | to_nice_yaml() | indent(4) }}
-    {{ phpldapadmin.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
-{% if phpldapadmin.context_root != "" %}
-    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
-{% endif %}
     gethomepage.dev/enabled: "true"
     gethomepage.dev/group: Auth
     gethomepage.dev/name: Php LDAP Admin
@@ -20,13 +13,13 @@ spec:
   ingressClassName: nginx
   tls:
     - hosts:
-      - phpldapadmin.auth.intra.{{ web_base_domain }}
+      - phpldapadmin.auth.intra.web_domain_name
       secretName: ingress-tls
   rules:
-  - host: phpldapadmin.auth.intra.{{ web_base_domain }}
+  - host: phpldapadmin.auth.intra.web_domain_name
     http:
       paths:
-      - path: {{ '/' if phpldapadmin.context_root == '' else phpldapadmin.context_root + '/?(.*)' }}
+      - path: /
         pathType: Prefix
         backend:
           service:
