--- a/apps/vagrant/.sops.yaml
+++ b/apps/vagrant/.sops.yaml
@@ -5,6 +5,9 @@ creation_rules:
 - path_regex: "auth-openldap/deploy/config/my-env.startup.yaml"
   encrypted_regex: "^(LDAP_ADMIN_PASSWORD|LDAP_CONFIG_PASSWORD|LDAP_READONLY_USER_PASSWORD)$"
   age: "age1ykc9cp7e7sylr09ldufwd337h6kvghn8ga250unudvxxlaczpuzsv04rqn"
+- path_regex: "auth-phpldapadmin/deploy/config/phpldapadmin.env"
+  encrypted_regex: "^(LDAP_BIND_PASS)$"
+  age: "age1ykc9cp7e7sylr09ldufwd337h6kvghn8ga250unudvxxlaczpuzsv04rqn"
 
 
 # Default Kubernetes manifest encryption
