--- a/ansible/install_applications_new/site.yml
+++ b/ansible/install_applications_new/site.yml
@@ -12,3 +12,4 @@
     - { role: auth-openldap,                 tags: kubernetes-app-auth-lemonldap,                when: openldap_enabled | bool }
     - { role: auth-lemonldap,                tags: kubernetes-app-auth-lemonldap,                when: lemonldap_enabled | bool }
     - { role: auth-phpldapadmin,             tags: kubernetes-app-auth-phpldapadmin,             when: phpldapadmin_enabled | bool }
+    - { role: dev-gitea,                     tags: kubernetes-app-dev-gitea,                     when: gitea_enabled | bool }
