--- a/apps/vagrant/.sops.yaml
+++ b/apps/vagrant/.sops.yaml
@@ -8,7 +8,13 @@ creation_rules:
 - path_regex: "auth-phpldapadmin/deploy/config/phpldapadmin.env"
   encrypted_regex: "^(LDAP_BIND_PASS)$"
   age: "age1ykc9cp7e7sylr09ldufwd337h6kvghn8ga250unudvxxlaczpuzsv04rqn"
-
+  
+- path_regex: "dev-gitea/deploy/config/gitea.secret.env"
+  encrypted_regex: "^(GITEA_ADMIN_PASSWORD|GITEA__mailer__PASSWD|GITEA_LDAP_BIND_PASSWORD)$"
+  age: "age1ykc9cp7e7sylr09ldufwd337h6kvghn8ga250unudvxxlaczpuzsv04rqn"
+- path_regex: "dev-gitea/deploy/config/pgsql.secret.env"
+  encrypted_regex: "^(POSTGRES_PASSWORD)$"
+  age: "age1ykc9cp7e7sylr09ldufwd337h6kvghn8ga250unudvxxlaczpuzsv04rqn"
 
 # Default Kubernetes manifest encryption
 - unencrypted_regex: "^(apiVersion|metadata|kind|type)$"
