--- a/apps/vagrant/dev-argo-workflows/application.yaml
+++ b/apps/vagrant/dev-argo-workflows/application.yaml
@@ -7,7 +7,7 @@ metadata:
   #finalizers:
   #  - resources-finalizer.argocd.argoproj.io
   labels:
-    app.kubernetes.io/name: reflector
+    app.kubernetes.io/name: argo-workflows
 spec:
   project: k8s-cluster
 
