--- a/ansible/install_applications/vars/download-deluge.yml
+++ b/ansible/install_applications/vars/download-deluge.yml
@@ -1,114 +1,4 @@
 ---
-# To avoid loops inside deluge
-_deluge_var_loader:
-  namespace: "download-deluge"
-  base_image:
-    repo: "docker.io"
-    name: "emmercm/libtorrent"
-    
-    # v2 shouldn't be supported yet : https://dev.deluge-torrent.org/ticket/3455
-    tag: "1.2.14-alpine" 
-    #tag: "1.2.15-alpine" # > Segfault when starting a torrent
-    #tag: "1.2.16-alpine" # > Segfault when starting a torrent
-    #tag: "2.0.5-alpine" # > Segfault when starting a torrent
-  version: 2.1.1
-
-deluge:
-  enabled: "{{ deluge_enabled | default(True) }}"
-
-  namespace: "{{ _deluge_var_loader.namespace }}"
-  version: "{{ _deluge_var_loader.version }}"
-
-  # TODO : we can't mount a Longhorn RWX volume to back it up :/
-  #app_backup:
-  #  name: download-deluge
-  #  repository: "{{ restic_apps_backup_repository }}"
-  #  namespace: "{{ _deluge_var_loader.namespace }}"
-  #  apps_to_stop:
-  #    - name: deluge-daemon
-  #      type: statefulset
-  #      replicas: 1
-  #    - name: deluge-web
-  #      type: statefulset
-  #      replicas: 1
-  #  longhorn_volumes:
-  #    - volume_name: deluge-data
-  #      pvc_name: deluge-data-pv-claim
-
-  labels_def:
-    app.kubernetes.io/name: deluge
-
-  labels_desc:
-    app.kubernetes.io/version: "{{ _deluge_var_loader.version }}"
-
-  container:
-    storage:
-      data: "{{ deluge_container_storage_data | default('256M') }}"
-  
-  local_user:
-    name: localclient
-    password: "{{ deluge_local_user_password | default('clear_password') }}"
-    level: 10
-
-# To avoid loops inside deluge_base
-_deluge_base_var_loader:
-  base_image: "{{ _deluge_var_loader.base_image }}"
-  image:
-    repo: "{{ docker_private_registry.url }}"
-    name: "deluge-base"
-    tag: "{{ _deluge_var_loader.version }}-{{ _deluge_var_loader.base_image.name | regex_replace('.*/', '') }}-{{ _deluge_var_loader.base_image.tag }}-2"
-
-deluge_base:
-  base_image: "{{ _deluge_base_var_loader.base_image }}"
-  private_image:
-    repo: "{{ docker_private_registry.url }}"
-    name: "{{_deluge_base_var_loader.image.name }}"
-    tag: "{{_deluge_base_var_loader.image.tag }}-2"
-
-deluge_daemon:
-  private_image:
-    repo: "{{ docker_private_registry.url }}"
-    name: "deluge-daemon"
-    tag: "{{ _deluge_base_var_loader.image.tag }}-2"
-
-  labels_def:
-    app.kubernetes.io/name: deluge
-    app.kubernetes.io/component: deluge-daemon
-
-  labels_desc: "{{ deluge.labels_desc }}"
-
-  container:
-    requests_cpu: "{{ deluge_container_requests_cpu | default('200m') }}"
-    requests_memory: "{{ deluge_container_requests_memory | default('256Mi') }}"
-    limits_cpu: "{{ deluge_container_limits_cpu | default('500m') }}"
-    limits_memory: "{{ deluge_container_limits_memory | default('256Mi') }}"
-
-  # See https://dev.deluge-torrent.org/wiki/UserGuide/Authentication
-  users: "{{ (deluge_daemon_users | default([])) + [ deluge.local_user, deluge_web.daemon_user ] }}"
-
+# TODO : delete when all apps that are using deluge_web.* are migrated to kustomize
 deluge_web:
-  private_image:
-    repo: "{{ docker_private_registry.url }}"
-    name: "deluge-web"
-    tag: "{{ _deluge_base_var_loader.image.tag }}"
-
-  labels_def:
-    app.kubernetes.io/name: deluge
-    app.kubernetes.io/component: deluge-web
-
-  labels_desc: "{{ deluge.labels_desc }}"
-
-  container:
-    requests_cpu: "{{ deluge_container_requests_cpu | default('50m') }}"
-    requests_memory: "{{ deluge_container_requests_memory | default('128Mi') }}"
-    limits_cpu: "{{ deluge_container_limits_cpu | default('250m') }}"
-    limits_memory: "{{ deluge_container_limits_memory | default('128Mi') }}"
-
-  context_root: "{{ deluge_web_context_root | default('') }}"
-
   password: "{{ deluge_web_password | default('clear_password') }}"
-
-  daemon_user:
-    name: "{{ deluge_web_user_name | default('web') }}"
-    password: "{{ deluge_web_user_password | default('clear_password') }}"
-    level: 10
