--- a/ansible/install_applications_new/site.yml
+++ b/ansible/install_applications_new/site.yml
@@ -14,3 +14,4 @@
     - { role: auth-phpldapadmin,             tags: kubernetes-app-auth-phpldapadmin,             when: phpldapadmin_enabled | bool }
     - { role: dev-gitea,                     tags: kubernetes-app-dev-gitea,                     when: gitea_enabled | bool }
     - { role: download-deluge,               tags: kubernetes-app-download-deluge,               when: deluge_enabled | bool }
+    - { role: download-pyload,               tags: kubernetes-app-download-pyload,               when: pyload_enabled | bool }
