--- a/apps/base/download-pyload/deploy/networkPolicy.yaml
+++ b/apps/base/download-pyload/deploy/networkPolicy.yaml
@@ -2,16 +2,13 @@ kind: NetworkPolicy
 apiVersion: networking.k8s.io/v1
 metadata:
   name: allow-to-pyload
-  namespace: {{ pyload.namespace }}
-  labels:
-    {{ pyload.labels_def | to_nice_yaml() | indent(4) }}
-    {{ pyload.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      {{ pyload.labels_def | to_nice_yaml() | indent(6) }}
+      app.kubernetes.io/name: pyload
+      app.kubernetes.io/component: pyload
 
   ingress:
     # Allow http from the ingress controller
@@ -20,20 +17,19 @@ spec:
       from:
         - namespaceSelector:
             matchLabels:
-              {{ ingress_nginx.namespace_labels_def | to_nice_yaml() | indent(14) }}
+              kubernetes.io/metadata.name: ingress-nginx
           podSelector:
             matchLabels:
-              {{ ingress_nginx.labels_def | to_nice_yaml() | indent(14) }}
+              app.kubernetes.io/name: ingress-nginx
 
-{% if homepage.config.pyload.enabled %}
     # Allow http from the homepage (to enable the widget)
     - ports:
         - port: webui
       from:
         - namespaceSelector:
             matchLabels:
-              name: {{ homepage.namespace }}
+              kubernetes.io/metadata.name: tool-homepage
           podSelector:
             matchLabels:
-              {{ homepage.labels_def | to_nice_yaml() | indent(14) }}
-{% endif %}
+              app.kubernetes.io/name: homepage
+              app.kubernetes.io/component: homepage
