--- a/apps/base/download-pyload/deploy/statefulSet.yaml
+++ b/apps/base/download-pyload/deploy/statefulSet.yaml
@@ -2,27 +2,24 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: pyload
-  namespace: {{ pyload.namespace }}
-  labels:
-    {{ pyload.labels_def | to_nice_yaml() | indent(4) }}
-    {{ pyload.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     reloader.stakater.com/auto: "true"
 spec:
   selector:
     matchLabels:
-      {{ pyload.labels_def | to_nice_yaml() | indent(6) }}
+      app.kubernetes.io/name: pyload
+      app.kubernetes.io/component: pyload
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        {{ pyload.labels_def | to_nice_yaml() | indent(8) }}
-        {{ pyload.labels_desc | to_nice_yaml() | indent(8) }}
+        app.kubernetes.io/name: pyload
+        app.kubernetes.io/component: pyload
     spec:
       initContainers:
       - name: create-folders
-        image: "{{ busybox.private_image | image_full_name }}"
+        image: "registry.lan/pyload-busybox:1.36.0"
         imagePullPolicy: Always
         command:
           - "sh"
@@ -31,11 +28,11 @@ spec:
             mkdir -p /pyload-config/config
             chown -R 1000:1000 /pyload-config/config
         volumeMounts:
-        - name: pyload-config-pv-claim
+        - name: pyload-data
           mountPath: /pyload-config
       containers:
       - name: pyload
-        image: "{{ pyload.private_image | image_full_name }}"
+        image: "registry.lan/pyload-ng:0.5.0b3.dev68-3.11.2-slim-bullseye"
         imagePullPolicy: Always        
         ports:
         - containerPort: 8000
@@ -47,33 +44,30 @@ spec:
         readinessProbe:
           httpGet:
             scheme: HTTP
-            path: {{ '/' if pyload.context_root == '' else pyload.context_root }}
+            path: /
             port: webui
           initialDelaySeconds: 3
           periodSeconds: 5
+        envFrom:
+        - secretRef:
+            name: pyload-env
         env:
-          - name: PYLOAD_DEFAULT_USER
-            value: "{{ pyload.default_user }}"
-          - name: PYLOAD_DEFAULT_PASSWORD
-            value: "{{ pyload.default_password }}"
-          - name: PYLOAD_CONF_webui_prefix
-            value: "{{ pyload.context_root }}"
           - name: PYLOAD_CONF_general_storage_folder
             value: /downloads
           - name: PYLOAD_CONF_log_filelog
             value: "False"
         resources:
           requests:
-            cpu: "{{ pyload.container.requests_cpu }}"
-            memory: "{{ pyload.container.requests_memory }}"
+            cpu: 200m
+            memory: 256Mi
           limits:
-            cpu: "{{ pyload.container.limits_cpu }}"
-            memory: "{{ pyload.container.limits_memory }}"
+            cpu: 500m
+            memory: 256Mi
         volumeMounts:
         - name: tz-config
           mountPath: /etc/localtime
           readOnly: true
-        - name: pyload-config-pv-claim
+        - name: pyload-data
           mountPath: /config
           subPath: config
         - name: pyload-download
@@ -85,6 +79,9 @@ spec:
       - name: tz-config
         hostPath:
           path: /etc/localtime
+      - name: pyload-data
+        persistentVolumeClaim:
+          claimName: pyload-data
       - name: pyload-download
         persistentVolumeClaim:
           claimName: nfs-download
@@ -94,12 +91,3 @@ spec:
       - name: docker-config
       nodeSelector:
         capability/general-purpose: 'yes'
-  volumeClaimTemplates:
-  - metadata:
-      name: pyload-config-pv-claim
-    spec:
-      accessModes: [ "ReadWriteOnce" ]
-      storageClassName: {{ kubernetes_longhorn_high_durability_storage_class_name }}
-      resources:
-        requests:
-          storage: {{ pyload.container.storage.config }}
