--- a/apps/base/download-sabnzbd/deploy/networkPolicy.yaml
+++ b/apps/base/download-sabnzbd/deploy/networkPolicy.yaml
@@ -2,16 +2,13 @@ kind: NetworkPolicy
 apiVersion: networking.k8s.io/v1
 metadata:
   name: allow-to-sabnzbd
-  namespace: {{ sabnzbd.namespace }}
-  labels:
-    {{ sabnzbd.labels_def | to_nice_yaml() | indent(4) }}
-    {{ sabnzbd.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      {{ sabnzbd.labels_def | to_nice_yaml() | indent(6) }}
+      app.kubernetes.io/name: sabnzbd
+      app.kubernetes.io/component: sabnzbd
 
   ingress:
     # Allow http from the ingress controller
@@ -20,23 +17,22 @@ spec:
       from:
         - namespaceSelector:
             matchLabels:
-              {{ ingress_nginx.namespace_labels_def | to_nice_yaml() | indent(14) }}
+              kubernetes.io/metadata.name: ingress-nginx
           podSelector:
             matchLabels:
-              {{ ingress_nginx.labels_def | to_nice_yaml() | indent(14) }}
+              app.kubernetes.io/name: ingress-nginx
 
-{% if homepage.config.sabnzbd.enabled %}
     # Allow http from the homepage (to enable the widget)
     - ports:
         - port: http
       from:
         - namespaceSelector:
             matchLabels:
-              name: {{ homepage.namespace }}
+              kubernetes.io/metadata.name: tool-homepage
           podSelector:
             matchLabels:
-              {{ homepage.labels_def | to_nice_yaml() | indent(14) }}
-{% endif %}
+              app.kubernetes.io/name: homepage
+              app.kubernetes.io/component: homepage
 
     # Allow from sickchill
     - ports:
@@ -44,7 +40,8 @@ spec:
       from:
         - namespaceSelector:
             matchLabels:
-              name: {{ sickchill.namespace }}
+              kubernetes.io/metadata.name: download-sickchill
           podSelector:
             matchLabels:
-              {{ sickchill.labels_def | to_nice_yaml() | indent(14) }}
+              app.kubernetes.io/name: sickchill
+              app.kubernetes.io/component: sickchill
