--- a/apps/base/download-sickchill/deploy/config/config_delta.secret.ini
+++ b/apps/base/download-sickchill/deploy/config/config_delta.secret.ini
@@ -4,13 +4,13 @@
 [General]
     web_host = 0.0.0.0
     web_port = 8081
-    web_root = {{ '/' if sickchill.context_root == '' else sickchill.context_root }}
+    web_root = /
     # Do not encrypt password, TODO enable it, see https://github.com/SickChill/SickChill/blob/master/sickbeard/helpers.py#L969
     encryption_version = 0
-    web_password = {{ sickchill.web_password }}
-    web_username = {{ sickchill.web_username }}
+    web_username = user_local
+    web_password = changeme
 
-    api_key = "{{ sickchill.api_key }}"
+    api_key = "abcdefghijklmnopqrstuvwxyz123456"
 
     enable_https = 0
     https_cert = server.crt
@@ -38,21 +38,21 @@
     torrent_dir = /mnt/download/torrent/auto-load
 
 [SABnzbd]
-    sab_host = http://{{ sabnzbd.servername }}:80/
-    sab_apikey = {{ sabnzbd.api_key }}
-    sab_username = {{ sabnzbd.user }}
-    sab_password = {{ sabnzbd.password }}
+    sab_host = http://sabnzbd.download-sabnzbd.svc.cluster.local:80/
+    sab_apikey = changeme
+    sab_username = user_local
+    sab_password = changeme
 
 [Email]
     #use_email = 0
     #email_notify_onsnatch = 0
     #email_notify_ondownload = 0
     #email_notify_onsubtitledownload = 0
-    email_tls = {{ sickchill.smtp.tls | ternary(1, 0) }}
-    email_host = "{{ sickchill.smtp.host }}"
-    email_port = {{ sickchill.smtp.port }}
-    email_user = "{{ sickchill.smtp.user }}"
-    email_password = "{{ sickchill.smtp.password }}"
-    email_from = "{{ sickchill.smtp.from }}"
+    email_tls = 1
+    email_host = "zonemta.infra-zonemta.svc.cluster.local"
+    email_port = 587
+    email_user = "smtp"
+    email_password = "changeme"
+    email_from = "noreply@k8s.test"
     #email_list = ""
     #email_subject = ""
