--- a/apps/base/download-sickchill/deploy/ingress.yaml
+++ b/apps/base/download-sickchill/deploy/ingress.yaml
@@ -2,10 +2,6 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: sickchill
-  namespace: {{ sickchill.namespace }}
-  labels:
-    {{ sickchill.labels_def | to_nice_yaml() | indent(4) }}
-    {{ sickchill.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
     nginx.ingress.kubernetes.io/proxy-connect-timeout: "900"
@@ -20,13 +16,13 @@ spec:
   ingressClassName: nginx
   tls:
     - hosts:
-      - sickchill.dl.intra.{{ web_base_domain }}
+      - sickchill.dl.intra.web_domain_name
       secretName: ingress-tls
   rules:
-  - host: sickchill.dl.intra.{{ web_base_domain }}
+  - host: sickchill.dl.intra.web_domain_name
     http:
       paths:
-      - path: {{ '/' if sickchill.context_root == '' else sickchill.context_root }}
+      - path: /
         pathType: Prefix
         backend:
           service:
