--- a/apps/base/download-sickchill/deploy/statefulset.yaml
+++ b/apps/base/download-sickchill/deploy/statefulset.yaml
@@ -2,27 +2,24 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: sickchill
-  namespace: {{ sickchill.namespace }}
-  labels:
-    {{ sickchill.labels_def | to_nice_yaml() | indent(4) }}
-    {{ sickchill.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     reloader.stakater.com/auto: "true"
 spec:
   selector:
     matchLabels:
-      {{ sickchill.labels_def | to_nice_yaml() | indent(6) }}
+      app.kubernetes.io/name: sickchill
+      app.kubernetes.io/component: sickchill
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        {{ sickchill.labels_def | to_nice_yaml() | indent(8) }}
-        {{ sickchill.labels_desc | to_nice_yaml() | indent(8) }}
+        app.kubernetes.io/name: sickchill
+        app.kubernetes.io/component: sickchill
     spec:
       initContainers:
       - name: create-folders
-        image: "{{ busybox.private_image | image_full_name }}"
+        image: "registry.lan/sickchill-busybox:1.36.0"
         imagePullPolicy: Always
         command:
           - "sh"
@@ -31,11 +28,11 @@ spec:
             mkdir -p /data/sickchill/data
             chown -R 1000:1000 /data/sickchill/data
         volumeMounts:
-        - name: sickchill-data-pv-claim
+        - name: sickchill-data
           mountPath: /data/sickchill
       containers:
       - name: sickchill
-        image: "{{ sickchill.private_image | image_full_name }}"
+        image: "registry.lan/sickchill:2023.1.2-3.11.2-slim-bullseye"
         imagePullPolicy: Always
         ports:
         - containerPort: 8081
@@ -47,22 +44,22 @@ spec:
         readinessProbe:
           httpGet:
             scheme: HTTP
-            path: {{ '/' if sickchill.context_root == '' else sickchill.context_root }}
+            path: /
             port: sickchill
           initialDelaySeconds: 3
           periodSeconds: 5
         resources:
           requests:
-            cpu: "{{ sickchill.container.requests_cpu }}"
-            memory: "{{ sickchill.container.requests_memory }}"
+            cpu: 100m
+            memory: 256Mi
           limits:
-            cpu: "{{ sickchill.container.limits_cpu }}"
-            memory: "{{ sickchill.container.limits_memory }}"
+            cpu: 500m
+            memory: 256Mi
         volumeMounts:
         - name: tz-config
           mountPath: /etc/localtime
           readOnly: true
-        - name: sickchill-data-pv-claim
+        - name: sickchill-data
           mountPath: /data
           subPath: data
         - name: sickchill-download
@@ -78,9 +75,12 @@ spec:
       - name: tz-config
         hostPath:
           path: /etc/localtime
+      - name: sickchill-data
+        persistentVolumeClaim:
+          claimName: sickchill-data
       - name: sickchill-config
-        configMap:
-          name: sickchill-config
+        secret:
+          secretName: sickchill-config
       - name: sickchill-download
         persistentVolumeClaim:
           claimName: nfs-download
@@ -93,12 +93,3 @@ spec:
       - name: docker-config
       nodeSelector:
         capability/general-purpose: 'yes'
-  volumeClaimTemplates:
-  - metadata:
-      name: sickchill-data-pv-claim
-    spec:
-      accessModes: [ "ReadWriteOnce" ]
-      storageClassName: {{ kubernetes_longhorn_high_durability_storage_class_name }}
-      resources:
-        requests:
-          storage: {{ sickchill.container.storage.data }}
