--- a/apps/base/home-esphome/deploy/statefulSet.yaml
+++ b/apps/base/home-esphome/deploy/statefulSet.yaml
@@ -2,29 +2,26 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: esphome
-  namespace: {{ esphome.namespace }}
-  labels:
-    {{ esphome.labels_def | to_nice_yaml() | indent(4) }}
-    {{ esphome.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     reloader.stakater.com/auto: "true"
 spec:
   selector:
     matchLabels:
-      {{ esphome.labels_def | to_nice_yaml() | indent(6) }}
+      app.kubernetes.io/name: esphome
+      app.kubernetes.io/component: esphome
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        {{ esphome.labels_def | to_nice_yaml() | indent(8) }}
-        {{ esphome.labels_desc | to_nice_yaml() | indent(8) }}
+        app.kubernetes.io/name: esphome
+        app.kubernetes.io/component: esphome
       annotations:
-        k8s.v1.cni.cncf.io/networks: {{ k8s_bridge_fullname }}
+        k8s.v1.cni.cncf.io/networks: "kube-system/k8s-bridge"
     spec:
       initContainers:
       - name: create-folders
-        image: "{{ busybox.private_image | image_full_name }}"
+        image: "registry.lan/esphome-busybox:1.36.0"
         imagePullPolicy: Always
         command:
           - "sh"
@@ -33,11 +30,11 @@ spec:
             mkdir -p /esphome/config
             chown -R 1000:1000 /esphome/config
         volumeMounts:
-        - name: esphome-config-pv-claim
+        - name: esphome-data
           mountPath: /esphome
       containers:
       - name: esphome
-        image: "{{ esphome.private_image | image_full_name }}"
+        image: "registry.lan/esphome:2023.3.2"
         imagePullPolicy: Always        
         ports:
         - containerPort: 6052
@@ -53,16 +50,16 @@ spec:
             port: http
         resources:
           requests:
-            cpu: "{{ esphome.container.requests_cpu }}"
-            memory: "{{ esphome.container.requests_memory }}"
+            cpu: 25m
+            memory: 256Mi
           limits:
-            cpu: "{{ esphome.container.limits_cpu }}"
-            memory: "{{ esphome.container.limits_memory }}"
+            cpu: 250m
+            memory: 512Mi
         volumeMounts:
         - name: tz-config
           mountPath: /etc/localtime
           readOnly: true
-        - name: esphome-config-pv-claim
+        - name: esphome-data
           mountPath: /config
           subPath: config
         - name: tmp-volume
@@ -71,18 +68,12 @@ spec:
       - name: tz-config
         hostPath:
           path: /etc/localtime
+      - name: esphome-data
+        persistentVolumeClaim:
+          claimName: esphome-data
       - name: tmp-volume
         emptyDir: {}
       imagePullSecrets:
       - name: docker-config
       nodeSelector:
         capability/general-purpose: 'yes'
-  volumeClaimTemplates:
-  - metadata:
-      name: esphome-config-pv-claim
-    spec:
-      accessModes: [ "ReadWriteOnce" ]
-      storageClassName: {{ kubernetes_longhorn_high_durability_storage_class_name }}
-      resources:
-        requests:
-          storage: {{ esphome.container.storage.config }}
