Migrate home-frigate to kustomize

--- a/ansible/install_applications_new/site.yml
+++ b/ansible/install_applications_new/site.yml
@@ -18,3 +18,4 @@
     - { role: download-sabnzbd,              tags: kubernetes-app-download-sabnzbd,              when: sabnzbd_enabled | bool }
     - { role: download-sickchill,            tags: kubernetes-app-download-sickchill,            when: sickchill_enabled | bool }
     - { role: home-esphome,                  tags: kubernetes-app-home-esphome,                  when: esphome_enabled | bool }
+    - { role: home-frigate,                  tags: kubernetes-app-home-frigate,                  when: frigate_enabled | bool }
