--- a/apps/base/home-frigate/deploy/networkPolicy.yaml
+++ b/apps/base/home-frigate/deploy/networkPolicy.yaml
@@ -2,16 +2,13 @@ kind: NetworkPolicy
 apiVersion: networking.k8s.io/v1
 metadata:
   name: allow-to-frigate
-  namespace: {{ frigate.namespace }}
-  labels:
-    {{ frigate.labels_def | to_nice_yaml() | indent(4) }}
-    {{ frigate.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      {{ frigate.labels_def | to_nice_yaml() | indent(6) }}
+      app.kubernetes.io/name: frigate
+      app.kubernetes.io/component: frigate
 
   ingress:
     # Allow from the ingress controller
@@ -20,10 +17,10 @@ spec:
       from:
         - namespaceSelector:
             matchLabels:
-              {{ ingress_nginx.namespace_labels_def | to_nice_yaml() | indent(14) }}
+              app.kubernetes.io/name: ingress-nginx
           podSelector:
             matchLabels:
-              {{ ingress_nginx.labels_def | to_nice_yaml() | indent(14) }}
+              app.kubernetes.io/name: ingress-nginx
 
     # Allow from homeassistant
     - ports:
@@ -32,8 +29,8 @@ spec:
       from:
         - namespaceSelector:
             matchLabels:
-              name: {{ homeassistant.namespace }}
+              app.kubernetes.io/name: home-homeassistant
         - podSelector:
             matchLabels:
-              {{ homeassistant.labels_def | to_nice_yaml() | indent(14) }}
-
+              app.kubernetes.io/name: homeassistant
+              app.kubernetes.io/component: homeassistant
