--- a/ansible/install_applications_new/site.yml
+++ b/ansible/install_applications_new/site.yml
@@ -19,3 +19,4 @@
     - { role: download-sickchill,            tags: kubernetes-app-download-sickchill,            when: sickchill_enabled | bool }
     - { role: home-esphome,                  tags: kubernetes-app-home-esphome,                  when: esphome_enabled | bool }
     - { role: home-frigate,                  tags: kubernetes-app-home-frigate,                  when: frigate_enabled | bool }
+    - { role: home-homeassistant,            tags: kubernetes-app-home-homeassistant,            when: homeassistant_enabled | bool }
