--- a/apps/vagrant/.sops.yaml
+++ b/apps/vagrant/.sops.yaml
@@ -32,6 +32,10 @@ creation_rules:
   encrypted_regex: "^(FRIGATE_MQTT_PASSWORD)$"
   age: "age1ykc9cp7e7sylr09ldufwd337h6kvghn8ga250unudvxxlaczpuzsv04rqn"
 
+- path_regex: "home-homeassistant/deploy/config/mysql/mysql.secret.env"
+  encrypted_regex: "^(MYSQL_PASSWORD|MYSQL_ROOT_PASSWORD)$"
+  age: "age1ykc9cp7e7sylr09ldufwd337h6kvghn8ga250unudvxxlaczpuzsv04rqn"
+
 # Default Kubernetes manifest encryption
 - unencrypted_regex: "^(apiVersion|metadata|kind|type)$"
   age: "age1ykc9cp7e7sylr09ldufwd337h6kvghn8ga250unudvxxlaczpuzsv04rqn"
