--- a/ansible/install_applications_new/site.yml
+++ b/ansible/install_applications_new/site.yml
@@ -20,3 +20,4 @@
     - { role: home-esphome,                  tags: kubernetes-app-home-esphome,                  when: esphome_enabled | bool }
     - { role: home-frigate,                  tags: kubernetes-app-home-frigate,                  when: frigate_enabled | bool }
     - { role: home-homeassistant,            tags: kubernetes-app-home-homeassistant,            when: homeassistant_enabled | bool }
+    - { role: home-mosquitto,                tags: kubernetes-app-home-mosquitto,                when: mosquitto_enabled | bool }
