--- a/apps/base/home-mosquitto/deploy/config/mosquitto.conf
+++ b/apps/base/home-mosquitto/deploy/config/mosquitto.conf
@@ -1,39 +1,27 @@
-# {{ ansible_managed }}
-
 # Config file for mosquitto
 #
 # See mosquitto.conf(5) for more information.
 
-{% for listener in mosquitto.listeners %}
-{% if loop.first %}
 # =================================================================
 # Default listener
 # =================================================================
-listener {{ listener.port }}
-{% else %}
+listener 1883
+
 # =================================================================
 # Extra listener
 # =================================================================
-listener {{ listener.port }}
-{% endif %}
+listener 8883
 
-{% if listener.websocket %}protocol websockets{% endif %}
-{% if listener.secure %}
 tls_version tlsv1.2
 capath /etc/ssl/mqtt/ca.crt
-certfile /etc/ssl/mqtt/{{ listener.cert_name }}.crt
-keyfile /etc/ssl/mqtt/{{ listener.cert_name }}.key
-{% endif %}
-
-{% endfor %}
-
+certfile /etc/ssl/mqtt/tls.crt
+keyfile /etc/ssl/mqtt/tls.key
 
 # =================================================================
 # Persistence
 # =================================================================
 persistence true
 persistence_location /mosquitto/data/
-
 
 # =================================================================
 # Logs
@@ -46,11 +34,8 @@ log_type warning
 #log_type notice
 log_type information
 
-
-{% if mosquitto.credentials | default([]) | length > 0 %}
 # =================================================================
 # Security
 # =================================================================
 allow_anonymous false
 password_file /mosquitto/config/passwd
-{% endif %}
