--- a/apps/base/home-mosquitto/deploy/statefulSet.yaml
+++ b/apps/base/home-mosquitto/deploy/statefulSet.yaml
@@ -2,27 +2,24 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: mosquitto
-  namespace: {{ mosquitto.namespace }}
-  labels:
-    {{ mosquitto.labels_def | to_nice_yaml() | indent(4) }}
-    {{ mosquitto.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     reloader.stakater.com/auto: "true"
 spec:
   selector:
     matchLabels:
-      {{ mosquitto.labels_def | to_nice_yaml() | indent(6) }}
+      app.kubernetes.io/name: mosquitto
+      app.kubernetes.io/component: mosquitto
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        {{ mosquitto.labels_def | to_nice_yaml() | indent(8) }}
-        {{ mosquitto.labels_desc | to_nice_yaml() | indent(8) }}
+        app.kubernetes.io/name: mosquitto
+        app.kubernetes.io/component: mosquitto
     spec:
       initContainers:
       - name: create-folders
-        image: "{{ busybox.private_image | image_full_name }}"
+        image: "registry.lan/mosquitto-busybox:1.36.0"
         imagePullPolicy: Always
         command:
           - "sh"
@@ -31,12 +28,15 @@ spec:
             mkdir -p /mosquitto/data
             chown -R 1883:1883 /mosquitto
         volumeMounts:
-        - name: mosquitto-data-pv-claim
+        - name: mosquitto-data
           mountPath: /mosquitto
       containers:
       - name: mosquitto
-        image: "{{ mosquitto.private_image | image_full_name }}"
-        imagePullPolicy: Always        
+        image: "registry.lan/mosquitto:2.0.15-openssl"
+        imagePullPolicy: Always     
+        envFrom:
+          - secretRef:
+              name: mosquitto-env   
         ports:
         - containerPort: 1883
           name: mqtt
@@ -51,25 +51,25 @@ spec:
             command:
             - sh
             - -c
-            - mosquitto_sub {% if mosquitto.healthcheck_credential %}-u {{ mosquitto.healthcheck_credential.user }} -P {{ mosquitto.healthcheck_credential.password }}{% endif %} -t '$SYS/broker/uptime' -C 1 | grep second
+            - mosquitto_sub -u ${HEALTHCHECK_USER} -P ${HEALTHCHECK_PASSWORD} -t '$SYS/broker/uptime' -C 1 | grep second
           initialDelaySeconds: 3
           periodSeconds: 5
         resources:
           requests:
-            cpu: "{{ mosquitto.container.requests_cpu }}"
-            memory: "{{ mosquitto.container.requests_memory }}"
+            cpu: 25m
+            memory: 32Mi
           limits:
-            cpu: "{{ mosquitto.container.limits_cpu }}"
-            memory: "{{ mosquitto.container.limits_memory }}"
+            cpu: 100m
+            memory: 64Mi
         volumeMounts:
         - name: tz-config
           mountPath: /etc/localtime
           readOnly: true
         - name: mosquitto-config
-          mountPath: /mosquitto/config
+          mountPath: /mosquitto/config/
         - name: certs-volume
           mountPath: /etc/ssl/mqtt
-        - name: mosquitto-data-pv-claim
+        - name: mosquitto-data
           mountPath: /mosquitto/data
           subPath: data
       securityContext:
@@ -78,6 +78,9 @@ spec:
       - name: tz-config
         hostPath:
           path: /etc/localtime
+      - name: mosquitto-data
+        persistentVolumeClaim:
+          claimName: mosquitto-data
       - name: mosquitto-config
         configMap:
           name: mosquitto-config
@@ -88,12 +91,3 @@ spec:
       - name: docker-config
       nodeSelector:
         capability/general-purpose: 'yes'
-  volumeClaimTemplates:
-  - metadata:
-      name: mosquitto-data-pv-claim
-    spec:
-      accessModes: [ "ReadWriteOnce" ]
-      storageClassName: {{ kubernetes_longhorn_high_durability_storage_class_name }}
-      resources:
-        requests:
-          storage: {{ mosquitto.container.storage.data }}
