--- a/apps/base/home-homeassistant/deploy/homeassistant/networkPolicy.yaml
+++ b/apps/base/home-homeassistant/deploy/homeassistant/networkPolicy.yaml
@@ -25,7 +25,7 @@ spec:
         # Allow from nodered
         - namespaceSelector:
             matchLabels:
-              name: home-nodered
+              app.kubernetes.io/name: home-nodered
           podSelector:
             matchLabels:
               app.kubernetes.io/name: nodered
