--- a/apps/base/home-nodered/deploy/ingress.yaml
+++ b/apps/base/home-nodered/deploy/ingress.yaml
@@ -2,10 +2,6 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: nodered
-  namespace: {{ nodered.namespace }}
-  labels:
-    {{ nodered.labels_def | to_nice_yaml() | indent(4) }}
-    {{ nodered.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     gethomepage.dev/enabled: "true"
     gethomepage.dev/group: Home
@@ -17,13 +13,13 @@ spec:
   ingressClassName: nginx
   tls:
     - hosts:
-      - nodered.home.intra.{{ web_base_domain }}
+      - nodered.home.intra.web_domain_name
       secretName: ingress-tls
   rules:
-  - host: nodered.home.intra.{{ web_base_domain }}
+  - host: nodered.home.intra.web_domain_name
     http:
       paths:
-      - path: {{ '/' if nodered.context_root == '' else nodered.context_root }}
+      - path: /
         pathType: Prefix
         backend:
           service:
