Migrate home-roomassistant to kustomize

--- a/ansible/install_applications_new/site.yml
+++ b/ansible/install_applications_new/site.yml
@@ -22,3 +22,4 @@
     - { role: home-homeassistant,            tags: kubernetes-app-home-homeassistant,            when: homeassistant_enabled | bool }
     - { role: home-mosquitto,                tags: kubernetes-app-home-mosquitto,                when: mosquitto_enabled | bool }
     - { role: home-nodered,                  tags: kubernetes-app-home-nodered,                  when: nodered_enabled | bool }
+    - { role: home-roomassistant,            tags: kubernetes-app-home-roomassistant,            when: roomassistant_enabled | bool }
