--- a/apps/vagrant/.sops.yaml
+++ b/apps/vagrant/.sops.yaml
@@ -36,6 +36,10 @@ creation_rules:
   encrypted_regex: "^(MYSQL_PASSWORD|MYSQL_ROOT_PASSWORD)$"
   age: "age1ykc9cp7e7sylr09ldufwd337h6kvghn8ga250unudvxxlaczpuzsv04rqn"
 
+- path_regex: "home-roomassistant/deploy/config/roomassistant.secret.env"
+  encrypted_regex: "^(RA_HOME_ASSISTANT_MQTT_PASSWORD)$"
+  age: "age1ykc9cp7e7sylr09ldufwd337h6kvghn8ga250unudvxxlaczpuzsv04rqn"
+
 # Default Kubernetes manifest encryption
 - unencrypted_regex: "^(apiVersion|metadata|kind|type)$"
   age: "age1ykc9cp7e7sylr09ldufwd337h6kvghn8ga250unudvxxlaczpuzsv04rqn"
