--- a/apps/base/home-zigbee2mqtt/deploy/ingress.yaml
+++ b/apps/base/home-zigbee2mqtt/deploy/ingress.yaml
@@ -2,14 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: zigbee2mqtt
-  namespace: {{ zigbee2mqtt.namespace }}
-  labels:
-    {{ zigbee2mqtt.labels_def | to_nice_yaml() | indent(4) }}
-    {{ zigbee2mqtt.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
-{% if zigbee2mqtt.context_root != "" %}
-    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
-{% endif %}
     gethomepage.dev/enabled: "true"
     gethomepage.dev/group: Home
     gethomepage.dev/name: Zigbee2MQTT
@@ -20,13 +13,13 @@ spec:
   ingressClassName: nginx
   tls:
     - hosts:
-      - zigbee2mqtt.home.intra.{{ web_base_domain }}
+      - zigbee2mqtt.home.intra.web_domain_name
       secretName: ingress-tls
   rules:
-  - host: zigbee2mqtt.home.intra.{{ web_base_domain }}
+  - host: zigbee2mqtt.home.intra.web_domain_name
     http:
       paths:
-      - path: {{ '/' if zigbee2mqtt.context_root == '' else zigbee2mqtt.context_root + '/?(.*)' }}
+      - path: /
         pathType: Prefix
         backend:
           service:
